--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -939,8 +939,8 @@
   "exchange_amount": "数量",
   "exchange_network_fee": "网络费用",
   "exchange_transfer_confirmation": "划转确认",
-  "exchange_transfer_history": "划转记录",
-  "exchange_transfer": "划转",
+  "exchange_transfer_history": "充提记录",
+  "exchange_transfer": "快捷充提",
   "exchange_from": "从",
   "exchange_to": "到",
   "coin_type": "币种",
@@ -950,8 +950,8 @@
   "exchange_account_balance": "账户余额",
   "exchange_wallet_balance": "钱包余额",
   "exchange": "交易",
-  "exchange_transfer_hint_wallet_to_exchange": "从钱包账户划转到交易账户，需要等待整个网络的确认，大约需要15-30分钟。",
-  "exchange_transfer_hint_account_to_wallet": "从交易账户划转到钱包账户每笔需要收取 {withdrawFee} {selectedCoinType}手续费",
+  "exchange_transfer_hint_wallet_to_exchange": "从钱包账户充值到交易账户，需要等待整个网络的确认，大约需要15-30分钟。",
+  "exchange_transfer_hint_account_to_wallet": "从交易账户提币到钱包账户每笔需要收取 {withdrawFee} {selectedCoinType}手续费",
   "exchange_order_history": "交易记录",
   "exchange_available": "可用",
   "exchange_frozen": "冻结",
@@ -967,14 +967,14 @@
   "exchange_asset_convert": "折合",
   "exchange_login_before_view_orders": "授权后查看记录",
   "exchange_recharge_status_1": "处理中",
-  "exchange_recharge_status_2": "已划转",
+  "exchange_recharge_status_2": "已充值",
   "exchange_withdraw_status_1": "处理中",
   "exchange_withdraw_status_2": "处理中",
   "exchange_withdraw_status_3": "已驳回",
   "exchange_withdraw_status_4": "处理中",
   "exchange_withdraw_status_5": "处理中",
-  "exchange_withdraw_status_6": "划转成功",
-  "exchange_withdraw_status_7": "划转失败已退款",
+  "exchange_withdraw_status_6": "提币成功",
+  "exchange_withdraw_status_7": "提币失败已退款",
   "exchange_withdraw_status_8": "已取消",
   "exchange_assets_running_status_1": "分红",
   "exchange_assets_running_status_2": "空投",
@@ -988,5 +988,7 @@
   "bio_auth_exchange_intro_content": "免密授权将您的钱包密码通过安全加密算法存储至手机设备的Keychain / KeyStore中，交易时调用生物识别（指纹或面容）鉴权，快速完成授权与签名。",
   "bio_auth_exchange_intro_content_2": "开启免密授权后，请妥善备份密码。如果忘记密码，可以通过导入助计词 / 私钥，重新设置密码",
   "bio_auth_exchange_risk_title": "Risk reminder",
-  "bio_auth_exchange_risk_content": "请了解你的手机设备生物识别的安全等级\n公共手机，请勿开启免密授权\n"
+  "bio_auth_exchange_risk_content": "请了解你的手机设备生物识别的安全等级\n公共手机，请勿开启免密授权\n",
+  "exchange_deposit_confirm": "充值确认",
+  "exchange_withdraw_confirm": "提币确认"
 }
