--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -980,5 +980,7 @@
   "bio_auth_exchange_intro_content": "비밀없는 인증은 안전한 암호화 알고리즘을 통해 모바일 장치의 키 체인 / 키 스토어에 지갑 암호를 저장하고, 거래 중에 생체 인식 (지문 또는 얼굴) 인증을 사용하여 빠르게 인증 및 서명을 완료합니다.",
   "bio_auth_exchange_intro_content_2": "비밀없는 인증을 활성화 한 후 비밀번호를 올바르게 백업하십시오. 비밀번호를 잊은 경우 니모닉 / 개인 키를 가져 와서 비밀번호를 재설정 할 수 있습니다.",
   "bio_auth_exchange_risk_title": "Risk reminder",
-  "bio_auth_exchange_risk_content": "모바일 장치의 생체 인식 보안 수준을 이해하십시오.\n공용 휴대폰, 비밀없는 인증을 열지 마십시오"
+  "bio_auth_exchange_risk_content": "모바일 장치의 생체 인식 보안 수준을 이해하십시오.\n공용 휴대폰, 비밀없는 인증을 열지 마십시오",
+  "exchange_deposit_confirm": "充值确认",
+  "exchange_withdraw_confirm": "提币确认"
 }
