--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -932,8 +932,8 @@
   "exchange_amount": "数量",
   "exchange_network_fee": "网络费用",
   "exchange_transfer_confirmation": "划转确认",
-  "exchange_transfer_history": "划转记录",
-  "exchange_transfer": "划转",
+  "exchange_transfer_history": "充提记录",
+  "exchange_transfer": "快捷充提",
   "exchange_from": "从",
   "exchange_to": "到",
   "coin_type": "币种",
@@ -943,8 +943,8 @@
   "exchange_account_balance": "账户余额",
   "exchange_wallet_balance": "钱包余额",
   "exchange": "交易",
-  "exchange_transfer_hint_wallet_to_exchange": "从钱包账户划转到交易账户，需要等待整个网络的确认，大约需要15-30分钟。",
-  "exchange_transfer_hint_account_to_wallet": "从交易账户划转到钱包账户每笔需要收取 {withdrawFee} {selectedCoinType}手续费",
+  "exchange_transfer_hint_wallet_to_exchange": "从钱包账户充值到交易账户，需要等待整个网络的确认，大约需要15-30分钟。",
+  "exchange_transfer_hint_account_to_wallet": "从交易账户提币到钱包账户每笔需要收取 {withdrawFee} {selectedCoinType}手续费",
   "exchange_order_history": "交易记录",
   "exchange_available": "可用",
   "exchange_frozen": "冻结",
@@ -960,13 +960,13 @@
   "exchange_asset_convert": "折合",
   "exchange_login_before_view_orders": "授權後查看記錄",
   "exchange_recharge_status_1": "處理中",
-  "exchange_recharge_status_2": "已劃轉",
+  "exchange_recharge_status_2": "已充值",
   "exchange_withdraw_status_1": "處理中",
   "exchange_withdraw_status_2": "處理中",
   "exchange_withdraw_status_3": "已駁回",
   "exchange_withdraw_status_4": "處理中",
   "exchange_withdraw_status_5": "處理中",
-  "exchange_withdraw_status_6": "劃轉成功",
+  "exchange_withdraw_status_6": "提币成功",
   "exchange_withdraw_status_7": "已退款",
   "exchange_withdraw_status_8": "已取消",
   "exchange_assets_running_status_2": "空投",
@@ -980,5 +980,7 @@
   "bio_auth_exchange_intro_content": "免密授權將您的錢包密碼通過安全加密算法存儲至手機設備的Keychain / KeyStore中，交易時調用生物識別（指紋或面容）鑑權，快速完成授權與簽名。",
   "bio_auth_exchange_intro_content_2": "開啟免密授權後，請妥善備份密碼。如果忘記密碼，可以通過導入助計詞 / 私鑰，重新設置密碼",
   "bio_auth_exchange_risk_title": "Risk reminder",
-  "bio_auth_exchange_risk_content": "請了解你的手機設備生物識別的安全等級\n公共手機，請勿開啟免密授權\n"
+  "bio_auth_exchange_risk_content": "請了解你的手機設備生物識別的安全等級\n公共手機，請勿開啟免密授權\n",
+  "exchange_deposit_confirm": "充值确认",
+  "exchange_withdraw_confirm": "提币确认"
 }
