--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -990,5 +990,8 @@
   "bio_auth_exchange_risk_title": "Risk reminder",
   "bio_auth_exchange_risk_content": "请了解你的手机设备生物识别的安全等级\n公共手机，请勿开启免密授权\n",
   "exchange_deposit_confirm": "充值确认",
-  "exchange_withdraw_confirm": "提币确认"
+  "exchange_withdraw_confirm": "提币确认",
+  "order_success": "下单成功",
+  "recharge": "充值",
+  "withdrawal": "提币"
 }
