--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -982,5 +982,8 @@
   "bio_auth_exchange_risk_title": "Risk reminder",
   "bio_auth_exchange_risk_content": "請了解你的手機設備生物識別的安全等級\n公共手機，請勿開啟免密授權\n",
   "exchange_deposit_confirm": "充值确认",
-  "exchange_withdraw_confirm": "提币确认"
+  "exchange_withdraw_confirm": "提币确认",
+  "order_success": "下單成功",
+  "recharge": "充值",
+  "withdrawal": "提幣"
 }
