[exchange]: add translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -993,9 +993,17 @@
   "bio_auth_exchange_intro_content_2": "Please backup your password securely after unlocking password-free authorization method. You can also reset password via importing mnemonic phrase/private key.",
   "bio_auth_exchange_risk_title": "Risk reminder",
   "bio_auth_exchange_risk_content": "Please understand the biometric security level of your mobile device\nPublic mobile phones, please do not open the secret-free authorization",
-  "exchange_deposit_confirm": "充值确认",
-  "exchange_withdraw_confirm": "提币确认",
+  "exchange_deposit_confirm": "Recharge Confirmation",
+  "exchange_withdraw_confirm": "Withdraw confirmation",
+  "exchange_withdraw_min": "Minimum withdrawal amount",
+  "exchange_deposit_min": "Minimum Recharge amount",
+  "exchange_deposit_input_hint": "Please enter the withdrawal quantity",
+  "exchange_withdraw_input_hint": "Please enter the recharge quantity",
+  "exchange_withdraw_less_than_min": "Less than the minimum withdrawal amount",
+  "exchange_deposit_less_than_min": "Less than the minimum recharge amount",
   "order_success": "Finished",
   "recharge": "Top-up",
-  "withdrawal": "Withdraw"
+  "withdrawal": "Withdraw",
+  "exchange_withdraw": "Withdraw",
+  "exchange_deposit": "Recharge"
 }
