--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -981,9 +981,17 @@
   "bio_auth_exchange_intro_content_2": "비밀없는 인증을 활성화 한 후 비밀번호를 올바르게 백업하십시오. 비밀번호를 잊은 경우 니모닉 / 개인 키를 가져 와서 비밀번호를 재설정 할 수 있습니다.",
   "bio_auth_exchange_risk_title": "Risk reminder",
   "bio_auth_exchange_risk_content": "모바일 장치의 생체 인식 보안 수준을 이해하십시오.\n공용 휴대폰, 비밀없는 인증을 열지 마십시오",
-  "exchange_deposit_confirm": "充值确认",
-  "exchange_withdraw_confirm": "提币确认",
+  "exchange_deposit_confirm": "충전 확인",
+  "exchange_withdraw_confirm": "출금 확인",
+  "exchange_withdraw_min": "최소 출금 금액",
+  "exchange_deposit_min": "최소 충전",
+  "exchange_deposit_input_hint": "출금 수량을 입력하세요",
+  "exchange_withdraw_input_hint": "재충전 수량을 입력하세요",
+  "exchange_withdraw_less_than_min": "최소 출금 금액 미만",
+  "exchange_deposit_less_than_min": "최소 충전량 미만",
   "order_success": "성공적으로 주문",
   "recharge": "재 충전",
-  "withdrawal": "출금"
+  "withdrawal": "출금",
+  "exchange_withdraw": "철수",
+  "exchange_deposit": "재충전"
 }
