--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -981,9 +981,17 @@
   "bio_auth_exchange_intro_content_2": "開啟免密授權後，請妥善備份密碼。如果忘記密碼，可以通過導入助計詞 / 私鑰，重新設置密碼",
   "bio_auth_exchange_risk_title": "Risk reminder",
   "bio_auth_exchange_risk_content": "請了解你的手機設備生物識別的安全等級\n公共手機，請勿開啟免密授權\n",
-  "exchange_deposit_confirm": "充值确认",
-  "exchange_withdraw_confirm": "提币确认",
+  "exchange_deposit_confirm": "充值確認",
+  "exchange_withdraw_confirm": "提幣確認",
+  "exchange_withdraw_min": "最小提幣數",
+  "exchange_deposit_min": "最小充值數",
+  "exchange_deposit_input_hint": "請輸入提幣數量",
+  "exchange_withdraw_input_hint": "請輸入充值數量",
+  "exchange_withdraw_less_than_min": "少於最小提幣數",
+  "exchange_deposit_less_than_min": "少於最小充值數",
   "order_success": "下單成功",
   "recharge": "充值",
-  "withdrawal": "提幣"
+  "withdrawal": "提幣",
+  "exchange_withdraw": "提幣",
+  "exchange_deposit": "充值"
 }
