--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -913,9 +913,9 @@
   "exchange_logged_out": "请授权",
   "exchange_name": "名称",
   "exchange_empty_list": "暂无记录",
-  "exchange_order_list_active": "全部委托",
+  "exchange_order_list_active": "当前委托",
   "exchange_fee": "手续费",
-  "exchange_order_list_history": "历史记录",
+  "exchange_order_list_history": "历史委托",
   "exchange_order_time": "时间",
   "exchange_order_method": "方式",
   "exchange_deal_price": "成交价",
