--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -993,5 +993,6 @@
   "recharge": "充值",
   "withdrawal": "提幣",
   "exchange_withdraw": "提幣",
-  "exchange_deposit": "充值"
+  "exchange_deposit": "充值",
+  "wallet_name_do_not_contain_space": "請勿包含空格"
 }
