--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -278,18 +278,18 @@
   "scan_name_cellular": "基站",
   "scan_name_bluetooth": "藍牙",
   "scan_name_gps": "GPS",
-  "scan_name_start" : "開始",
-  "scan_name_title" : "信號掃描",
-  "scan_signal_upload_protocol" : "信號上傳協議",
-  "scan_exit_tips" : "正在掃描中，確認退出嗎?",
-  "scan_hyn_is_empty" : "HYN wallet 為空",
+  "scan_name_start": "開始",
+  "scan_name_title": "信號掃描",
+  "scan_signal_upload_protocol": "信號上傳協議",
+  "scan_exit_tips": "正在掃描中，確認退出嗎?",
+  "scan_hyn_is_empty": "HYN wallet 為空",
   "latest_version_tip": "已經是最新版本",
-  "scan_finish" : "掃描完成",
+  "scan_finish": "掃描完成",
   "scan_ing_func": "正在掃描{scanName}信號",
-  "scan_upload_error" : "上傳失敗",
+  "scan_upload_error": "上傳失敗",
   "scan_upload_signal_success_hint": "信號數據上傳成功",
   "scan_thanks_contribution_signal_hint": "感謝您做的數據貢獻！",
-  "scan_confirm_upload" : "上傳信號數據",
+  "scan_confirm_upload": "上傳信號數據",
   "scan_collect_signal_func": "已收集到{num}個信號",
   "selected_area": "選擇地區",
   "what_region_use_titan": "妳在什麼地區使用{app}?",
@@ -704,7 +704,7 @@
   "non_secret_open_success": "免密支付開啟成功",
   "non_secret_open_fail": "免密支付開啟失敗",
   "use_face_verify": "使用您的面容進行驗證",
-"cannot_fint_wallet": "找不到本地錢包",
+  "cannot_fint_wallet": "找不到本地錢包",
   "wallet_test": "錢包測試",
   "active_btc": "激活BTC",
   "show_qr": "顯示二維碼",
@@ -914,7 +914,7 @@
   "exchange_name": "名称",
   "exchange_empty_list": "暂无记录",
   "exchange_order_list_active": "当前委托",
-  "exchange_fee": "手续费",
+  "exchange_fee": "網絡費",
   "exchange_order_list_history": "历史委托",
   "exchange_order_time": "时间",
   "exchange_order_method": "方式",
@@ -994,5 +994,8 @@
   "withdrawal": "提幣",
   "exchange_withdraw": "提幣",
   "exchange_deposit": "充值",
-  "wallet_name_do_not_contain_space": "請勿包含空格"
+  "wallet_name_do_not_contain_space": "請勿包含空格",
+  "exchange_change_wallet": "更換錢包",
+  "exchange_logout": "退出登錄",
+  "exchange_logout_hint": "您將要退出授權狀態，確定要退出嗎？"
 }
