[bio-auth]: add expired hint

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1009,5 +1009,6 @@
   "wallet_name_do_not_contain_space": "Do not include space",
   "exchange_change_wallet": "Switch wallet",
   "exchange_logout": "sign out",
-  "exchange_logout_hint": "You are about to exit the authorization status. Are you sure you want to exit?"
+  "exchange_logout_hint": "You are about to exit the authorization status. Are you sure you want to exit?",
+  "bio_auth_expired_hint": "Biometrics has expired, please enter password"
 }
