--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -997,5 +997,6 @@
   "wallet_name_do_not_contain_space": "공백을 포함하지 마십시오",
   "exchange_change_wallet": "지갑 변경",
   "exchange_logout": "로그 아웃",
-  "exchange_logout_hint": "승인 상태를 종료하려고합니다. 종료 하시겠습니까?"
+  "exchange_logout_hint": "승인 상태를 종료하려고합니다. 종료 하시겠습니까?",
+  "bio_auth_expired_hint": "생체 인식이 만료되었습니다. 비밀번호를 입력하세요."
 }
