--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -997,5 +997,6 @@
   "wallet_name_do_not_contain_space": "請勿包含空格",
   "exchange_change_wallet": "更換錢包",
   "exchange_logout": "退出登錄",
-  "exchange_logout_hint": "您將要退出授權狀態，確定要退出嗎？"
+  "exchange_logout_hint": "您將要退出授權狀態，確定要退出嗎？",
+  "bio_auth_expired_hint": "生物識別已過期，請輸入密碼"
 }
