[wallet] update translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -114,7 +114,7 @@
   "rmb": "CNY",
   "map3_node_introduction": "Map3",
   "private_and_safety": "Private and Secure",
-  "create_wallet": "Create Wallet",
+  "create_wallet": "Create New Wallet",
   "import_wallet": "Import Wallet",
   "private_wallet_tips": "Private key never leaves your device",
   "create_wallet_tips": "Create a private account",
