--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -113,7 +113,7 @@
   "rmb": "인민폐",
   "map3_node_introduction": "Map3 노드 소개",
   "private_and_safety": "개인보호 와 안전",
-  "create_wallet": "지갑 생성",
+  "create_wallet": "새 지갑 생성",
   "import_wallet": "지갑 가져오기",
   "private_wallet_tips": "당신 지갑 키는 당신 것입니다 (개인 보호 지갑)",
   "create_wallet_tips": "비공개 개인 지갑 만들기",
