--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -113,7 +113,7 @@
   "rmb": "人民币",
   "map3_node_introduction": "Map3",
   "private_and_safety": "私密和安全",
-  "create_wallet": "创建钱包",
+  "create_wallet": "创建新钱包",
   "import_wallet": "导入钱包",
   "private_wallet_tips": "账户私钥永远不会离开你的设备",
   "create_wallet_tips": "创建一个私密钱包",
