--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -113,7 +113,7 @@
   "rmb": "人民幣",
   "map3_node_introduction": "MAP3",
   "private_and_safety": "私密和安全",
-  "create_wallet": "創建錢包",
+  "create_wallet": "創建新錢包",
   "import_wallet": "導入錢包",
   "private_wallet_tips": "賬戶私鑰永遠不會離開妳的設備",
   "create_wallet_tips": "創建壹個私密賬戶",
