[add] add max withdraw limit

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -996,10 +996,12 @@
   "exchange_deposit_confirm": "Recharge Confirmation",
   "exchange_withdraw_confirm": "Withdraw confirmation",
   "exchange_withdraw_min": "Minimum withdrawal amount",
+  "exchange_withdraw_max": "Maximum withdrawal amount",
   "exchange_deposit_min": "Minimum Recharge amount",
   "exchange_deposit_input_hint": "Please enter the withdrawal quantity",
   "exchange_withdraw_input_hint": "Please enter the recharge quantity",
   "exchange_withdraw_less_than_min": "Less than the minimum withdrawal amount",
+  "exchange_withdraw_over_than_max": "Over than the maximum withdrawal amount",
   "exchange_deposit_less_than_min": "Less than the minimum recharge amount",
   "order_success": "Finished",
   "recharge": "Top-up",
