--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -984,10 +984,12 @@
   "exchange_deposit_confirm": "충전 확인",
   "exchange_withdraw_confirm": "출금 확인",
   "exchange_withdraw_min": "최소 출금 금액",
+  "exchange_withdraw_max": "최대 인출",
   "exchange_deposit_min": "최소 충전",
   "exchange_deposit_input_hint": "출금 수량을 입력하세요",
   "exchange_withdraw_input_hint": "재충전 수량을 입력하세요",
   "exchange_withdraw_less_than_min": "최소 출금 금액 미만",
+  "exchange_withdraw_over_than_max": "최대 인출 금액 초과",
   "exchange_deposit_less_than_min": "최소 충전량 미만",
   "order_success": "성공적으로 주문",
   "recharge": "재 충전",
