--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -984,10 +984,12 @@
   "exchange_deposit_confirm": "充值確認",
   "exchange_withdraw_confirm": "提幣確認",
   "exchange_withdraw_min": "最小提幣數",
+  "exchange_withdraw_max": "最大提幣數",
   "exchange_deposit_min": "最小充值數",
   "exchange_deposit_input_hint": "請輸入提幣數量",
   "exchange_withdraw_input_hint": "請輸入充值數量",
   "exchange_withdraw_less_than_min": "少於最小提幣數",
+  "exchange_withdraw_over_than_max": "大於最大提幣數",
   "exchange_deposit_less_than_min": "少於最小充值數",
   "order_success": "下單成功",
   "recharge": "充值",
