--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -997,7 +997,7 @@
   "exchange_deposit_input_hint": "请输入提币数量",
   "exchange_withdraw_input_hint": "请输入充值数量",
   "exchange_withdraw_less_than_min": "少于最小提币数",
-  "exchange_withdraw_over_than_max": "大于最大提币数",
+  "exchange_withdraw_over_than_max": "超过最大提币数",
   "exchange_deposit_less_than_min": "少于最小充值数",
   "order_success": "下单成功",
   "recharge": "充值",
