--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1000,5 +1000,6 @@
   "exchange_change_wallet": "지갑 변경",
   "exchange_logout": "로그 아웃",
   "exchange_logout_hint": "승인 상태를 종료하려고합니다. 종료 하시겠습니까?",
-  "bio_auth_expired_hint": "생체 인식이 만료되었습니다. 비밀번호를 입력하세요."
+  "bio_auth_expired_hint": "생체 인식이 만료되었습니다. 비밀번호를 입력하세요.",
+  "map3_main_page_title": "Map3지도 서비스 노드"
 }
