--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1023,6 +1023,9 @@
   "atlas_total_staking": "总抵押",
   "atlas_reward_rate": "预期收益",
   "atlas_node_rank": "节点排名",
-  "edit": "编辑",
-  "save": "保存"
+  "edit": "Edit",
+  "save": "Save",
+  "create_atlas_node": "Create Atlas node",
+  "last_step": "Previous",
+  "next_step": "Next"
 }
