--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -711,7 +711,7 @@
   "non_secret_open_success": "免密支付开启成功",
   "non_secret_open_fail": "免密支付开启失败",
   "use_face_verify": "使用您的面容进行验证",
-"cannot_fint_wallet": "找不到本地钱包",
+  "cannot_fint_wallet": "找不到本地钱包",
   "wallet_test": "钱包测试",
   "active_btc": "激活BTC",
   "show_qr": "显示二维码",
@@ -1009,5 +1009,20 @@
   "exchange_logout": "退出登录",
   "exchange_logout_hint": "您将要退出授权状态，确定要退出吗？",
   "bio_auth_expired_hint": "生物识别已过期，请输入密码",
-  "map3_main_page_title": "Map3地图服务节点"
+  "map3_main_page_title": "Map3地图服务节点",
+  "dex_account_error": "数据异常",
+  "dex_account_data_abnormal": "DEX账户数据异常",
+  "dex_fix_account": "修复账户状态",
+  "dex_fix_account_hint": "为了避免账号不能正常使用，请尽快修复数据",
+  "dex_fix_account_dialog_title": "修复账户状态",
+  "dex_fix_account_balance_condition": "系统将对异常交易进行重新结算，您的账户余额可能会有变动，为了顺利完成修复，请确保你的交易账户可用余额满足以下条件:",
+  "not_less_than": "不少于",
+  "dex_fix_account_success": "修复成功啦!",
+  "dex_fix_accounta_fail": "修复失败! 请确保你的交易账户中可用余额满足以下条件",
+  "dex_fixing_account": "修复中，请稍等",
+  "wallet_show_dex_account_error": "你的dex账户数据异常，请尽快修复！查看详情",
+  "status": "状态",
+  "dex_settlement_error": "钱包已到账，DEX数据结算失败",
+  "exchange_withdraw_status_9": "提币账单异常",
+  "wallet_send_fix_dex_account": "你的dex账户数据异常，请先修复！"
 }
