--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1028,5 +1028,6 @@
   "status": "status",
   "dex_settlement_error": "The balance has transferred to wallet, but the DEX data settlement failed",
   "exchange_withdraw_status_9": "Abnormal withdrawal bill",
-  "wallet_send_fix_dex_account": "Your dex account data is abnormal, please fix it first!"
+  "wallet_send_fix_dex_account": "Your dex account data is abnormal, please fix it first!",
+  "dex_fix_account_contact_us": "If you have any questions, please contact customer service"
 }
