--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1024,5 +1024,8 @@
   "create_atlas_node": "创建Atlas节点",
   "last_step": "上一步",
   "next_step": "下一步",
-  "not_open_please_wait": "待开放，敬请期待"
+  "not_open_please_wait": "待开放，敬请期待",
+  "important_hint": "重要提示",
+  "got_it": "知道了",
+  "wallet_show_atlas_alert": "HYN主链币已上线，请将HYN ERC20于一周之内（2020.11.11之前）映射为主链币，一周之后HYN ERC20变为无效币！"
 }
