--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -1013,8 +1013,11 @@
   "atlas_node_rank": "节点排名",
   "edit": "编辑",
   "save": "保存",
-  "create_atlas_node": "创建Atlas节点",
+  "create_atlas_node": "創建Atlas節點",
   "last_step": "上一步",
   "next_step": "下一步",
-  "not_open_please_wait": "待开放，敬请期待"
+  "not_open_please_wait": "待開放，敬請期待",
+  "important_hint": "重要提示",
+  "got_it": "知道了",
+  "wallet_show_atlas_alert": "HYN主鏈幣已上線，請將HYN ERC20於一周之內（2020.11.11之前）映射為主鏈幣，一周之後HYN ERC20變為無效幣！"
 }
