update transation entity

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -613,7 +613,7 @@
   "gas_limit_reached_hint": "Gas超过区块限制",
   "insufficient_funds_for_transfer_hint": "转账资金不足",
   "intrinsic_gas_too_low_hint": "指定Gas不够",
-  "insufficient_funds_for_gas_price_value_hint": "当前钱包ETH余额不足以支付gas费",
+  "insufficient_funds_for_gas_price_value_hint": "当前钱包余额不足以支付gas费",
   "provision_insufficient_hint": "奖金池正在准备中",
   "not_half_time_to_collect_hint": "未达到提取一半收益的时间",
   "already_collected_hint": "已经提取了",
@@ -1049,5 +1049,4 @@
   "exchange_withdraw_status_9": "提币账单异常",
   "wallet_send_fix_dex_account": "你的dex账户数据异常，请先修复！",
   "dex_fix_account_contact_us": "如有疑问，请联系客服"
-  "wallet_show_atlas_alert": "HYN主链币已上线，请将HYN ERC20于一周之内（2020.11.04之前）映射为主链币，一周之后HYN ERC20变为无效币！"
 }
