--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -189,7 +189,7 @@
   "input_corrent_count_hint": "Please enter the correct amount",
   "input_count_over_balance": "Exceed balance limit",
   "account_is_empty": "Account is empty",
-  "gas_fee": "Transaction Fee(ETH)",
+  "gas_fee": "Transaction Fee",
   "speed_slow": "Slow",
   "speed_normal": "Normal",
   "speed_fast": "Fast",
@@ -1033,7 +1033,7 @@
   "not_open_please_wait": "待开放，敬请期待",
   "important_hint": "重要提示",
   "got_it": "知道了",
-  "wallet_show_atlas_alert": "HYN主链币已上线，请将HYN ERC20于一周之内（2020.11.04之前）映射为主链币，一周之后HYN ERC20变为无效币！",
+  "wallet_show_atlas_alert": "HYN主链币已上线，请将HYN ERC20于(北京时间 2020.11.04之前）映射为主链币，之后HYN ERC20变为无效币！",
   "exchange_logout_hint": "You are about to exit the authorization status. Are you sure you want to exit?",
   "bio_auth_expired_hint": "Biometrics has expired, please enter password",
   "map3_main_page_title": "Map3 map service node",
