--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -427,7 +427,7 @@
   "freeze_balance_reward_direct_push": "·  創建節點需要暫時凍結500U賬戶余額，用於支付直推人的貢獻獎勵。直推人及獎勵收取節點總收益的5%。",
   "confirm_bug": "確定買入",
   "mortgage_hyn_num": "抵押HYN數量",
-  "mortgage_wallet_balance": "（錢包余額 {balance}）",
+  "mortgage_wallet_balance": "（{walletName} 錢包余額: {balance}）",
   "mintotal_buy": "最低買入{minTotal}",
   "mintotal_hyn": "不能少於{minTotal}HYN",
   "hyn_balance_no_enough": "HYN余額不足",
