--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,7 +4,8 @@
   "route": "Route",
   "no_recommended_route": "No recommended route yet",
   "less_than_1_min": "Less than 1 minute",
-  "n_day": "{day} day ",
+  "n_day": "{day} epoch ",
+  "n_day_v8": "{day} day",
   "n_hour": "{hour} hour ",
   "n_minute": "{minute} minute ",
   "km": "{km} km ",
