--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1014,7 +1014,7 @@
   "block_height": "区块高度",
   "atlas_elected_nodes": "当选节点",
   "atlas_candidate_nodes": "总节点",
-  "atlas_next_age": "下个纪元",
+  "atlas_next_age": "下个纪元还需",
   "atlas_create_node": "创建Atlas节点",
   "atlas_launch_tutorial": "开通教程",
   "atlas_fee_rate": "管理费",
@@ -1050,5 +1050,17 @@
   "exchange_withdraw_status_9": "提币账单异常",
   "wallet_send_fix_dex_account": "你的dex账户数据异常，请先修复！",
   "dex_fix_account_contact_us": "如有疑问，请联系客服",
-  "duplicate_identity_hint": "节点号已被占用，请修改!"
+  "duplicate_identity_hint": "节点号已被占用，请修改!",
+  "my_nodes": "我的节点",
+  "lastest_launched_nodes": "最新启动的节点",
+  "check_after_has_wallet": "请创建或导入钱包后查看",
+  "my_nodes_empty": "没有我的节点，您可以创建节点",
+  "no_lastest_active_nodes": "没有最新启动的节点，您可以创建节点",
+  "check_reward": "查看收益",
+  "check_more": "查看更多",
+  "map3_nodes": "Map3地图服务节点",
+  "map3_nodes_v1": "Map3节点（v1.0）",
+  "tutorial": "开通教程",
+  "map3_introduction": "Map3已开放云节点抵押，通过创建和委托抵押合约有效提升服务质量和网络安全，提供全球去中心化地图服务。节点参与者将在合约到期后按抵押量获得奖励。",
+  "map3_introduce_title": "Map3节点介绍"
 }
