--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1030,7 +1030,7 @@
   "not_open_please_wait": "待开放，敬请期待",
   "important_hint": "重要提示",
   "got_it": "知道了",
-  "wallet_show_atlas_alert": "HYN主链币已上线，请将HYN ERC20于(北京时间 2020.11.02之前）映射为主链币，之后HYN ERC20变为无效币！",
+  "wallet_show_atlas_alert": "HYN主链币已上线，请将HYN ERC20于(北京时间 2020.11.02之前）映射为主链币，无法在未支持HYN主网的交易所或者钱包充提交易，之后HYN ERC20变为无效币！",
   "exchange_logout_hint": "您将要退出授权状态，确定要退出吗？",
   "bio_auth_expired_hint": "生物识别已过期，请输入密码",
   "map3_main_page_title": "Map3地图服务节点",
