--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1062,5 +1062,6 @@
   "map3_nodes_v1": "Map3节点（v1.0）",
   "tutorial": "开通教程",
   "map3_introduction": "Map3已开放云节点抵押，通过创建和委托抵押合约有效提升服务质量和网络安全，提供全球去中心化地图服务。节点参与者将在合约到期后按抵押量获得奖励。",
-  "map3_introduce_title": "Map3节点介绍"
+  "map3_introduce_title": "Map3节点介绍",
+  "exchange_main_block_hyn": "兑换主链币"
 }
