--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -1056,5 +1056,23 @@
   "map3_introduce_title": "Map3节点介绍",
   "exchange_main_block_hyn": "兑换主链币",
   "mapping": "映射中",
-  "atlas_transfer_broadcast_success_description": "已在区块链上网络广播转账的消息，区块链网络需要6秒钟开采验证。"
+  "atlas_transfer_broadcast_success_description": "已在区块链上网络广播转账的消息，区块链网络需要6秒钟开采验证。",
+  "check_for_detail_info": "查看详细信息",
+  "transfer_successful": "转账成功",
+  "failed": "失败",
+  "transfer_amount": "金额",
+  "transfer_gas_fee": "矿工费",
+  "transfer_id": "交易号",
+  "from_address": "收款地址",
+  "transfer_to_address": "付款地址",
+  "transfer_hash": "转账Hash:",
+  "transfer_status": "状态:",
+  "tx_age": "纪元:",
+  "tx_block": "区块",
+  "tx_time": "时间",
+  "tx_from_address": "付款地址",
+  "tx_to_address": "收款地址",
+  "tx_amount": "金额",
+  "tx_type": "类型",
+  "tx_input_data": "输入数据"
 }
