[Add] add translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1067,5 +1067,30 @@
   "tutorial": "开通教程",
   "map3_introduction": "Map3已开放云节点抵押，通过创建和委托抵押合约有效提升服务质量和网络安全，提供全球去中心化地图服务。节点参与者将在合约到期后按抵押量获得奖励。",
   "map3_introduce_title": "Map3节点介绍",
-  "exchange_main_block_hyn": "兑换主链币"
+  "exchange_main_block_hyn": "兑换主链币",
+  "exchange_mapping": "映射中",
+  "wallet_transfer_title": "你有未确认的转账，继续转账将被覆盖。",
+  "wallet_symbol_pair_tips": "即将开通该交易对，敬请期待!",
+  "wallet_cancel_transfer_tips": "取消交易操作无法保证能够成功取消您的原始交易。如果取消成功，您将被收取上述交易费用。",
+  "wallet_cancel_send_tips": "已发送取消操作，请稍后刷新。",
+  "wallet_transaction_finish_tips": "交易即将完成，无法取消。",
+  "wallet_speed": "加速",
+  "wallet_speed_transfer_tips": "加速交易操作无法保证能够成功加速您的原始交易。如果加速成功，您将被收取更高的交易费用。",
+  "wallet_have_speed_tips": "已发送加速操作，请稍后刷新。",
+  "wallet_translation_finish_not_speed_tips": "交易即将完成，无法加速。",
+  "wallet_fail_title": "失败",
+  "transfer": "转账",
+  "msg_create_atlas": "创建Atlas",
+  "msg_edit_atlas": "编辑Atlas",
+  "msg_re_delegation": "复抵押",
+  "msg_cancel_re_delegation": "取消复抵押",
+  "msg_collect_re_delegation_reward": "提取复抵押奖励",
+  "msg_create_atlas": "创建Map3节点",
+  "msg_collect_micro_staking_rewards" :"提取微抵押奖励",
+  "msg_renew_map3": "下期预设",
+  "msg_un_micro_delegate": "部分撤销",
+  "msg_micro_delegate": "微抵押",
+  "msg_edit_map3": "编辑Map3节点",
+  "msg_terminate_map3": "终止Map3节点"
 }
+
