--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -1054,5 +1054,29 @@
   "tutorial": "开通教程",
   "map3_introduction": "Map3已开放云节点抵押，通过创建和委托抵押合约有效提升服务质量和网络安全，提供全球去中心化地图服务。节点参与者将在合约到期后按抵押量获得奖励。",
   "map3_introduce_title": "Map3节点介绍",
-  "exchange_main_block_hyn": "兑换主链币"
+  "exchange_main_block_hyn": "兑换主链币",
+  "exchange_mapping": "映射中",
+  "wallet_transfer_title": "你有未確認的轉賬，繼續轉賬將被覆蓋。",
+  "wallet_symbol_pair_tips": "即將開通該交易對，敬請期待!",
+  "wallet_cancel_transfer_tips": "取消交易操作無法保證能夠成功取消您的原始交易。如果取消成功，您將被收取上述交易費用。",
+  "wallet_cancel_send_tips": "已發送取消操作，請稍後刷新。",
+  "wallet_transaction_finish_tips": "交易即將完成，無法取消。",
+  "wallet_speed": "加速",
+  "wallet_speed_transfer_tips": "加速交易操作無法保證能夠成功加速您的原始交易。如果加速成功，您將被收取更高的交易費用。",
+  "wallet_have_speed_tips": "已發送加速操作，請稍後刷新。",
+  "wallet_translation_finish_not_speed_tips": "交易即將完成，無法加速。",
+  "wallet_fail_title": "失敗",
+  "transfer": "轉賬",
+  "msg_create_atlas": "創建Atlas",
+  "msg_edit_atlas": "編輯Atlas",
+  "msg_re_delegation": "复抵押",
+  "msg_cancel_re_delegation": "取消复抵押",
+  "msg_collect_re_delegation_reward": "提取复抵押獎勵",
+  "msg_create_atlas": "創建Map3節點",
+  "msg_collect_micro_staking_rewards" :"提取微抵押獎勵",
+  "msg_renew_map3": "下期預設",
+  "msg_un_micro_delegate": "部分撤銷",
+  "msg_micro_delegate": "微抵押",
+  "msg_edit_map3": "編輯Map3節點",
+  "msg_terminate_map3": "終止Map3節點"
 }
